fix: better loading feedback and non mobile style

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -41,4 +41,11 @@
 }
 
 @media (min-width: 361px) {
+  .header-title-container {
+    margin-left: 50px;
+  }
+
+  .header-links {
+    margin-right: 52px;
+  }
 }
