--- a/src/components/PostItCard/style.css
+++ b/src/components/PostItCard/style.css
@@ -44,6 +44,3 @@
   margin: 0px 15px;
   flex-direction: column;
 }
-
-@media (min-width: 361px) {
-}
