--- a/src/pages/NotFound/style.css
+++ b/src/pages/NotFound/style.css
@@ -11,6 +11,3 @@
   align-items: center;
   justify-content: center;
 }
-
-@media (min-width: 361px) {
-}
